[package]
name = "spotify"
version = "0.1.0"
authors = ["Ian Lum <ianlum314@gmail.com>"]
edition = "2018"
# resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.41"
dotenv = "0.15.0"
env_logger = "0.8.4"
futures = "0.3.15"
itertools = "0.10.1"
rand = "0.8.4"
# rspotify = "0.10.0"
rspotify = { git = "https://github.com/ramsayleung/rspotify", branch = "auth-rewrite-part3", features = ["cli"] }
tokio = { version = "1.7.1", features = ["full"] }
